@@ -89,6 +89,11 @@ Other Changes
 
 ==================  4.10.0 =================
 
+New Features
+----------------------
+* SOLR-6196: The overseerstatus collection API instruments amILeader and ZK state update calls.
+  (shalin)
+
 Bug Fixes
 ----------------------
 
